Bug 154307 - XML Form Document: Duplicate entry in context menu for adding elements to instance (kf5)
Summary: XML Form Document: Duplicate entry in context menu for adding elements to ins...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.1.0.3 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 target:7.5.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2023-03-21 10:49 UTC by Robert Großkopf
Modified: 2023-03-26 01:30 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Shows entry "Add Item", which is a duplicate of "Add Atribute" (41.85 KB, image/png)
2023-03-21 10:49 UTC, Robert Großkopf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2023-03-21 10:49:24 UTC
Created attachment 186112 [details]
Shows entry "Add Item", which is a duplicate of "Add Atribute"

Have a look at the attached screenshot.
You will get this when opening File → New → XML Form Document with right click on Instance Data.
"Add Item" and "Add Attribute" will start the same dialog "Add Attribute".
There is no special function for "Add Item" available.

this useless entry appears first in

Version: 7.1.0.3 / LibreOffice Community
Build ID: f6099ecf3d29644b5008cc8f48f42f4a40986e4c
CPU threads: 6; OS: Linux 5.3; UI render: default; VCL: kf5
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: threaded

Doesn't appear in LO 7.0.5.2 on the same system (OpenSUSE 15.3 64bit rpm Linux).
Comment 1 Xisco Faulí 2023-03-21 11:34:09 UTC
I can't reproduce it in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c1af1b9c555480305862336954ceefe14865e27d
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: x11
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 2 Xisco Faulí 2023-03-21 11:59:50 UTC
Regression introduced by:

author	Caolán McNamara <caolanm@redhat.com>	2020-06-19 12:37:05 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2020-06-23 10:21:08 +0200
commit 3c5e074a8fe5e0a18d326d37bc54a5ec0f077e4e (patch)
tree b8ae22aadc90b45e6ad87f5a7608e0c98fe6d572
parent 92859fafdaffe5dbd7e5e27e7c02725c4e64a3e6 (diff)
weld DataNavigator

Bisected with: bibisect-linux64-7.1

Adding Cc: to Caolán McNamara
Comment 3 Caolán McNamara 2023-03-22 15:25:42 UTC
I can only see this with kf5, which suggest there might be a generic kf5 bug with showing menu entries which have been set to not visible so there are possibly other context menus around the place with invisible entries which are getting shown when they shouldn't.

In this case I can explicitly "remove" rather than "hide" the entries and that seems to be fine for this specific case.
Comment 4 Commit Notification 2023-03-22 16:38:45 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fc9126c3cb84d6b53c1d6daa10814ae25f863056

tdf#154307 remove instead of hide these menu entries

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2023-03-22 16:45:09 UTC
done in trunk, backport to 7-5 in gerrit
Comment 6 Commit Notification 2023-03-26 01:30:48 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/ea705802b93e90d6cd251fda56dc9896b2caa52b

tdf#154307 remove instead of hide these menu entries

It will be available in 7.5.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.