tdf#154307 remove instead of hide these menu entries

because on kf5 they are getting shown, which suggests a wider more
generic bug on that variant, but use remove for this specific case
because that's ok for this usage and works around the problem for now.

Change-Id: Ib2bc316cc33894253a0b6335ae8643d0c8d78794
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149304
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>